Add Create reauisition first launch page test

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.15",
     "allure-playwright": "^3.3.2"
+  },
+  "dependencies": {
+    "playwright": "^1.54.1"
   }
 }
