--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "t6",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test",
+    "test:headed": "npx playwright test --headed",
+    "test:debug": "npx playwright test --debug",
+    "test:ui": "npx playwright test --ui",
+    "allure:generate": "npx allure generate allure-results --clean -o allure-report",
+    "allure:open": "npx allure open allure-report",
+    "allure:serve": "npx allure serve allure-results",
+    "test:allure": "npm run test && npm run allure:generate && npm run allure:open",
+    "clean": "rmdir /s /q allure-results allure-report 2>nul || true"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
